--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <link rel="stylesheet" href="./assets/css/grid.css">
   <link rel="stylesheet" href="./style/css/style.css">
   <link rel="stylesheet" href="./assets/css/header.css">
- 
   
-  <title>Final</title>
+  <title>CSS&HTML</title>
 </head>
 <body>
   <header class="header">
