--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/grid.css">
-  <link rel="stylesheet" href="./style/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/header.css">
   
   <title>CSS&HTML</title>
@@ -23,8 +23,17 @@
         <div class="header-menu">
           <img src="./assets/icons/menu.png" alt="" class="header-menu-img">
         </div>
+        <div class="phone-container none">
+          <img class="phone-img"src="./assets/icons/call.png" alt="">
+          <p class="phone">+38(000) 000-00-00</p>
+          <p class="phone-text">Бесплатная консультация</p>
+        </div>
+          <button class="request none">Заказать звонок</button>
+        <div class="enter-form text-align-center none">
+          <img class="user-img" src="./assets/icons/enter1.png">
+          <p class="enter-form">Войти Регистрация</p>
+        </div>
       </div>
-
   </div>
 </header>
 </body>
